# doradb

./: .codacy.yml  .codecov.yml  .coderabbit.yml  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  deny.toml  pr-review.md
.codex/agents/: style-auditor.toml
.config/: nextest.toml
.gemini/commands/: discuss.toml  issue.toml  quick-review.toml  rfc.toml  task.toml
.githooks/: pre-commit
.github/workflows/: build.yml  cargo-deny.yml  gemini-review.yml  gemini-scheduled-triage.yml
docs/: architecture.md  async-io.md  benchmark-tool.md  block-index.md  buffer-pool.md  checkpoint-and-recovery.md  checkpoint.md  data-checkpoint.md  deletion-checkpoint.md  delta-checkpoint.md  engine-component-lifetime.md  error-spec.md  garbage-collect.md  index-design.md  observability-logging.md  public-error-audit.csv  recovery.md  redo-log.md  secondary-index.md  table-file.md  transaction-system.md  unsafe-usage-baseline.md  unsafe-usage-principles.md
docs/backlogs/: 000000-template.md  000001-pedantic-clippy-adoption-policy.todo.md  000002-non-unique-index-for-catalog-tables.todo.md  000003-improve-libaio-stub-struct-design.todo.md  000004-fix-flaky-readonly-pool-drop-eviction-reload-test.todo.md  000005-varbyte-advanced-compression-for-lwc.md  000006-row-to-lwc-streaming-serialization-memory-optimization.md  000007-lwc-oversize-rowpage-handling.md  000008-storage-path-configuration-audit.md  000009-table-data-pool-specialization-validation.md  000010-column-deletion-buffer-gc-and-persisted-marker-cleanup-policy.md  000011-cold-update-delete-insert-integration-with-column-deletion-buffer.md  000012-versioned-page-id-recovery-serialization-policy.md  000013-versioned-page-id-helper-api-from-page-guard.md  000014-issue-skill-shell-wrapper-command.md  000018-unsafe-regression-ci-policy.md  (+149 more)
doradb-bench/: Cargo.toml
doradb-bench/src/: cli.rs  error.rs  lib.rs  manifest.rs  output.rs  runner.rs
doradb-bench/src/workload/: insert.rs  mod.rs  read.rs
doradb-bench/tests/: lifecycle.rs
doradb-compute/: Cargo.toml
doradb-expr/: Cargo.toml
doradb-storage/: Cargo.toml
doradb-storage/docs/: architecture.md  checkpoint-and-recovery.md  index-design.md  transaction-system.md
doradb-storage/examples/: bench_aio.rs  bench_block_index.rs  bench_btree.rs  bench_channel.rs  bench_column_runtime_lookup.rs  bench_insert.rs  bench_readonly_buffer_pool.rs  bench_readonly_single_miss_latency.rs  btree_analysis.rs  multi_threaded_trx.rs  multi_threaded_trx_v10.rs  multi_threaded_trx_v3.rs  multi_threaded_trx_v4.rs  multi_threaded_trx_v5.rs  multi_threaded_trx_v6.rs  multi_threaded_trx_v7.rs  multi_threaded_trx_v8.rs  multi_threaded_trx_v9.rs  quick_start.rs  weak_handle_baseline.rs
doradb-storage/src/: bitmap.rs  catalog.rs  component.rs  engine.rs  engine_poison.rs  error.rs  float.rs  free_list.rs  id.rs  latch.rs  layout.rs  lib.rs  lifetime.rs  map.rs  memcmp.rs  notify.rs  obs.rs  poison.rs  ptr.rs  quiescent.rs  ringbuffer.rs  root.rs  runtime.rs  serde.rs  session.rs  stats.rs  stmt.rs  storage_path.rs  thread.rs  value.rs
doradb-storage/src/buffer/: arena.rs  evict.rs  evictor.rs  fixed.rs  frame.rs  guard.rs  identity.rs  load.rs  mod.rs  page.rs  pool_guard.rs  readonly.rs  util.rs
doradb-storage/src/catalog/: checkpoint.rs  index.rs  mod.rs  runtime.rs  spec.rs  storage.rs  table.rs
doradb-storage/src/catalog/storage/: checkpoint.rs  columns.rs  indexes.rs  merge.rs  mod.rs  object.rs  schemas.rs  table_replay_silent_watermarks.rs  tables.rs
doradb-storage/src/col/: alloc.rs  array.rs  attr.rs  bitmap.rs  chunk.rs  repr.rs  sel.rs
doradb-storage/src/col/codec/: single.rs
doradb-storage/src/compression/: bitpacking.rs  lwc_page.rs  mod.rs
doradb-storage/src/conf/: buffer.rs  consts.rs  engine.rs  fs.rs  mod.rs  path.rs  table_fs.rs  trx.rs
doradb-storage/src/file/: block_integrity.rs  cow_file.rs  fs.rs  meta_block.rs  meta_page.rs  mod.rs  multi_table_file.rs  page_integrity.rs  super_block.rs  super_page.rs  table_file.rs  table_fs.rs
doradb-storage/src/index/: block_index.rs  block_index_root.rs  btree.rs  btree_hint.rs  btree_key.rs  btree_node.rs  btree_scan.rs  btree_value.rs  column_block_index.rs  column_checkpoint.rs  column_deletion_blob.rs  column_payload.rs  composite_secondary_index.rs  disk_tree.rs  index_stream.rs  mem_index.rs  mod.rs  non_unique_index.rs  owned_stream.rs  row_block_index.rs  row_page_index.rs  secondary_index.rs  smart_key.rs  unique_index.rs  util.rs
doradb-storage/src/index/btree/: algo.rs  cursor.rs  hint.rs  key.rs  mod.rs  node.rs  scan.rs  value.rs
doradb-storage/src/io/: backend.rs  buf.rs  completion.rs  file.rs  free_list.rs  iouring_backend.rs  libaio_abi.rs  libaio_backend.rs  mod.rs  ringbuffer.rs  table_file.rs
doradb-storage/src/latch/: hybrid.rs  mod.rs  mutex.rs  rwlock.rs
doradb-storage/src/lock/: mod.rs  state.rs
doradb-storage/src/log/: block_group.rs  buf.rs  format.rs  log_replay.rs  mod.rs  prefix.rs  recover.rs  redo.rs  redo_format.rs  replay.rs  seal.rs
doradb-storage/src/lwc/: block.rs  mod.rs  page.rs
doradb-storage/src/recovery/: mod.rs  redo_stream.rs  resources.rs  row_state.rs  stream.rs  timeline.rs
doradb-storage/src/row/: mod.rs  ops.rs  vector_scan.rs
doradb-storage/src/stmt/: mod.rs
doradb-storage/src/table/: access.rs  checkpoint_workflow.rs  deletion_buffer.rs  dml.rs  dml_validator.rs  gc.rs  hot.rs  layout.rs  lifecycle.rs  mem_table.rs  mod.rs  mvcc.rs  page_transition.rs  persistence.rs  recover.rs  rollback.rs  schema.rs  storage.rs  tests.rs
doradb-storage/src/trx/: group.rs  log.rs  log_replay.rs  mod.rs  purge.rs  recover.rs  redo.rs  retention.rs  row.rs  stmt.rs  stream_stmt.rs  sys.rs  sys_conf.rs  sys_trx.rs  sys_v1.rs  sys_v10.rs  sys_v3.rs  sys_v4.rs  sys_v5.rs  sys_v6.rs  sys_v7.rs  sys_v8.rs  sys_v9.rs  undo.rs  ver_map.rs
doradb-storage/src/trx/undo/: index.rs  mod.rs  row.rs
doradb-storage/tests/: public_api_smoke.rs
tools/: backlog.rs  coverage_focus.rs  doc-id.rs  error_audit.rs  issue.rs  rfc.rs  style_audit.rs  task.rs  unsafe_inventory.rs
(+486 files in other folders)
