[workspace]
members = [
    "doradb-storage",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
error-stack = "0.7"
bitflags = "2.1"
zerocopy = "0.8"
zerocopy-derive = "0.8"
parking_lot = { version = "0.12", features = ["send_guard"] }
libc = "0.2"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
flume = { version = "0.11", features = ["select"] }
either = "1.13"
event-listener = "5.4"
semistr = "0.1"
async-executor = "1.13"
smol = "2.0"
toml = "1.1"
byte-unit = { version = "5", features = ["serde"] }
ahash = "0.8"
glob = "0.3"
memmap2 = "0.9"
futures = "0.3"
scopeguard = "1.2"
blake3 = "1.8"
crc32fast = "1.4"
ordered-float = { version = "5.1", features = ["serde"] }
dashmap = "6.2"
io-uring = "0.7"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
tempfile = "3"

[profile.release]
debug = true
