[workspace]
members = [
    "doradb-storage",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
error-stack = "0.7"
bitflags = "2.1"
zerocopy = "0.8"
zerocopy-derive = "0.8"
parking_lot = { version = "0.12", features = ["send_guard"] }
libc = "0.2"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
flume = { version = "0.11", features = ["select"] }
either = "1.13"
event-listener = "5.4"
semistr = "0.1"
async-executor = "1.13"
smol = "2.0"
toml = "1.1"
byte-unit = { version = "5", features = ["serde"] }
ahash = "0.8"
glob = "0.3"
memmap2 = "0.9"
futures = "0.3"
scopeguard = "1.2"
blake3 = "1.8"
crc32fast = "1.4"
ordered-float = { version = "5.1", features = ["serde"] }
dashmap = "6.2"
io-uring = "0.7"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
tempfile = "3"

[profile.release]
debug = true

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
doc_markdown = "allow"
elidable_lifetime_names = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
format_push_string = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
large_stack_arrays = "allow"
manual_assert = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
match_wild_err_arm = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
range_plus_one = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_as_ptr = "allow"
return_self_not_must_use = "allow"
same_length_and_capacity = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
verbose_bit_mask = "allow"
wildcard_imports = "allow"
