[package]
name = "doradb-bench"
version = "0.1.0"
edition = "2024"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Standalone DoraDB storage benchmark tool"

[[bin]]
name = "doradb-bench"
path = "src/bin/doradb_bench.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
doradb-storage = { path = "../doradb-storage" }
easy-parallel = { workspace = true }
serde = { workspace = true }
smol = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
