[package]
name = "doradb-storage"
version = "0.1.0"
edition = "2021"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-storage/"

[dependencies]
doradb-datatype = { version = "0.1.0", path = "../doradb-datatype" }
smallvec = {version = "1.8", features = ["union"]}
thiserror = "1.0"
bitflags = "1.3"
bytemuck = "1.7"
parking_lot = {version = "0.12", features = ["send_guard"] }
libc = "0.2.164"
crossbeam-utils = "0.8"
serde = { version = "1.0.216", features = ["derive"] }
bincode = { version = "2.0.0-rc", features = ["serde"] }
flume = { version = "0.11", features = ["select"] }
either = "1.13"
event-listener = "5.4"

[dev-dependencies]
rand = "0.8"
bitcode = { version = "0.6.3", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
smol = "2.0"
easy-parallel = "3.3"
async-executor = "1.13"
humantime = "2.1"
criterion = { version = "0.5", features = ["html_reports"] }
criterion-perf-events = "0.4"
perfcnt = "0.8"
byte-unit = "5"
fastrand = "2"

[profile.release]
debug = true
