[package]
name = "doradb-storage"
version = "0.1.0"
edition = "2024"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-storage/"

[dependencies]
smallvec = {version = "1.8", features = ["union"]}
thiserror = "1.0"
bitflags = "1.3"
bytemuck = { version = "1.7", features = ["derive"] }
parking_lot = {version = "0.12", features = ["send_guard"] }
libc = "0.2"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
flume = { version = "0.11", features = ["select"] }
either = "1.13"
event-listener = "5.4"
semistr = "0.1"
async-executor = "1.13"
smol = "2.0"
crc32fast = "1.4"
toml = "0.8"
byte-unit = { version = "5", features = ["serde"] }
glob = "0.3"
memmap2 = "0.9"
async-lock = "3"
futures = "0.3"
scopeguard = "1.2"
blake3 = "1.8"
ordered-float = {version = "5.1", features = ["serde"] }

[features]
default = ["libaio"]
libaio = []
mlock = []

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
clap = { version = "4.5", features = ["derive"] }
easy-parallel = "3.3"
humantime = "2.1"
criterion = { version = "0.5", features = ["html_reports"] }

fastrand = "2"
tikv-jemallocator = "0.6"
bplustree = "0.1.0"
