[package]
name = "doradb-storage"
version = "0.1.0"
edition = "2024"
authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Storage module of X-Engine"
keywords = ["database", "encoding"]
categories = ["database-implementations"]
repository = "https://github.com/jiangzhe/doradb/doradb-storage/"

[lints]
workspace = true

[features]
default = ["iouring"]
libaio = []
iouring = ["dep:io-uring"]

[dependencies]
thiserror = { workspace = true }
error-stack = { workspace = true }
bitflags = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
crossbeam-utils = { workspace = true }
serde = { workspace = true }
flume = { workspace = true }
either = { workspace = true }
event-listener = { workspace = true }
semistr = { workspace = true }
async-executor = { workspace = true }
smol = { workspace = true }
toml = { workspace = true }
byte-unit = { workspace = true }
ahash = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
scopeguard = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
ordered-float = { workspace = true }
dashmap = { workspace = true }
io-uring = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
tempfile = { workspace = true }
